syntax = "proto3";

package io.pipeline.repository.v1;

import "repository_service_data.proto";
import "pipeline_core_types.proto";

option java_package = "io.pipeline.repository.v1";
option java_multiple_files = true;

// ============================================================================
// PIPEDOC REPOSITORY SERVICE
// ============================================================================

// Service for managing PipeDoc storage with metadata and export/import capabilities
service PipeDocRepositoryService {
  // ========== RAW PIPEDOC OPERATIONS (for data scientists) ==========
  rpc CreatePipeDoc(CreatePipeDocRequest) returns (CreatePipeDocResponse);
  rpc GetPipeDoc(GetPipeDocRequest) returns (io.pipeline.data.v1.PipeDoc);
  rpc UpdatePipeDoc(UpdatePipeDocRequest) returns (io.pipeline.data.v1.PipeDoc);
  rpc DeletePipeDoc(DeletePipeDocRequest) returns (DeleteResponse);
  rpc ListPipeDocs(ListPipeDocsRequest) returns (ListPipeDocsResponse);
  
  // ========== STORED PIPEDOC OPERATIONS (for browsing/metadata) ==========
  rpc CreateStoredPipeDoc(CreatePipeDocRequest) returns (CreateStoredPipeDocResponse);
  rpc GetStoredPipeDoc(GetPipeDocRequest) returns (StoredPipeDoc);
  rpc UpdateStoredPipeDoc(UpdatePipeDocRequest) returns (StoredPipeDoc);
  rpc DeleteStoredPipeDoc(DeletePipeDocRequest) returns (DeleteResponse);
  rpc ListStoredPipeDocs(ListPipeDocsRequest) returns (ListStoredPipeDocsResponse);
  
  // ========== BATCH OPERATIONS ==========
  rpc BatchCreatePipeDocs(stream CreatePipeDocRequest) returns (stream BatchOperationResult);
  
  // ========== EXPORT/IMPORT OPERATIONS ==========
  rpc ExportPipeDocs(ExportPipeDocsRequest) returns (stream ExportChunk);
  rpc ImportPipeDocs(stream ImportChunk) returns (ImportResponse);
  
  // ========== REPOSITORY MANAGEMENT ==========
  rpc FormatPipeDocRepository(FormatRepositoryRequest) returns (FormatRepositoryResponse);
}

// ============================================================================
// REQUEST/RESPONSE MESSAGES
// ============================================================================

// Create PipeDoc request
message CreatePipeDocRequest {
  io.pipeline.data.v1.PipeDoc pipe_doc = 1;
  optional io.pipeline.data.v1.Tags tags = 2; // Optional repository tags for categorization
  optional string description = 3; // Optional human-readable description
}

// Create PipeDoc response (raw version)
message CreatePipeDocResponse {
  string storage_id = 1;
}

// Create stored PipeDoc response (with metadata)
message CreateStoredPipeDocResponse {
  string storage_id = 1;
  StoredPipeDoc stored_document = 2;
}

// Get PipeDoc request
message GetPipeDocRequest {
  string storage_id = 1;
}

// Update PipeDoc request
message UpdatePipeDocRequest {
  string storage_id = 1;
  io.pipeline.data.v1.PipeDoc pipe_doc = 2;
  optional io.pipeline.data.v1.Tags tags = 3; // Optional repository tags for categorization
  optional string description = 4; // Optional human-readable description
}

// Delete PipeDoc request
message DeletePipeDocRequest {
  string storage_id = 1;
}

// List PipeDocs request
message ListPipeDocsRequest {
  PaginationRequest pagination = 1;
}

// List PipeDocs response (raw version)
message ListPipeDocsResponse {
  repeated io.pipeline.data.v1.PipeDoc pipe_docs = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// List stored PipeDocs response (with metadata)
message ListStoredPipeDocsResponse {
  repeated StoredPipeDoc stored_documents = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// Export PipeDocs request
message ExportPipeDocsRequest {
  repeated string document_ids = 1; // Specific IDs (empty = export all)
  string filter = 2; // Simple filter: "tags.environment=test" 
  ExportFormat format = 3; // Export format
}
